# brewhouse-manager

./: .dockerignore  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  mise.toml  pyproject.toml  tslint.json
.github/workflows/: ci.yml
api/: .coveragerc  api.py  app.py  migrate.sh
api/db/: __init__.py  admins.py  audit.py  batch_locations.py  batch_overrides.py  batches.py  beers.py  beverages.py  cold_brews.py  fermentation_ctrl.py  fermentation_ctrl_stats.py  image_transitions.py  locations.py  on_tap.py  plaato_data.py  sensors.py  tap_monitors.py  taps.py  user_locations.py  users.py
api/db/types/: __init__.py  nested.py
api/db_migrations/: README  alembic.ini  alembic_wrapper.py  check_migrations_up_to_date.py  env.py
api/db_migrations/versions/: 20210721T042632_init.py  20220119T010915_add_admin_users_table.py  20220119T010915_add_users_table.py  20220130T134750_add_untappd_id_to_beer.py  20220420T202835_added_ferm_ctrl_devices_api.py  20220513T145225_add_brewery_column_to_beers.py  20220513T145313_add_beverages_table.py  20220513T151814_remove_tap_type_column_from_tap_table.py  20220624T204417_added_brewery_link_and_meta_to_beverage_.py  20220704T020728_add_name_prefix_and_suffix_to_tap.py  20221004T145909_add_beer_and_beverage_image_transitions.py  20221020T192215_add_locations_to_users_and_missing_assets.py  20221021T135635_add_admin_field_to_users.py  20221021T215829_add_api_key_to_users_table.py  20230402T172513_abstract_beers_and_beverages_to_on_tap_.py  20240904T165355_add_beer_overrides_to_batches.py  20240905T155120_add_batch_no_column_to_batches.py  20250824T205058_add_optional_name_and_image_url_to_batches.py  20251009T191300_move_locations_to_batches.py  20260201T011048_remove_fermentation_controller_tables.py  20260201T014414_add_plaato_data_table.py  20260205T120000_rename_sensors_to_tap_monitors.py  20260205T221215_create_migration.py
api/dependencies/: __init__.py  auth.py
api/lib/: __init__.py  aws.py  config.py  exceptions.py  json.py  logging.py  time.py  units.py  util.py
api/lib/assets/: __init__.py  files.py  s3.py
api/lib/devices/: __init__.py  particle.py
api/lib/devices/plaato_keg/: __init__.py  blynk_protocol.py  command_writer.py  connection_handler.py  data_processor.py  (+2 more)
api/lib/external_brew_tools/: __init__.py  brewfather.py  exceptions.py
api/lib/sensors/: __init__.py  exceptions.py  keg_volume_monitor.py  kegtron.py  open_plaato_keg.py  plaato_blynk.py  plaato_key.py
api/lib/tap_monitors/: __init__.py  exceptions.py  keg_volume_monitor.py  kegtron.py  kegtron_gen1.py  open_plaato_keg.py  plaato_blynk.py  plaato_keg.py
api/resources/: __init__.py  admins.py  assets.py  auth.py  batches.py  beers.py  beverage.py  dashboard.py  exceptions.py  external_brew_tools.py  fermentation_ctrl.py  image_transitions.py  locations.py  pages.py  sensors.py  settings.py  taps.py  users.py
api/routers/: __init__.py  assets.py  auth.py  batches.py  beers.py  beverages.py  dashboard.py  exceptions.py  external_brew_tools.py  image_transitions.py  kegtron.py  kegtron_gen1.py  locations.py  pages.py  plaato_keg.py  sensors.py  settings.py  tap_monitors.py  taps.py  users.py
api/schemas/: base.py  batches.py  beers.py  beverages.py  locations.py  plaato_keg.py  sensors.py  tap_monitors.py  taps.py  users.py
api/services/: base.py  batches.py  beers.py  beverages.py  locations.py  plaato_keg.py  sensors.py  tap_monitors.py  taps.py  users.py
api/tests/: conftest.py  test_api.py  test_app.py
api/tests/_resources/: kegtron_pro_sample.json
api/tests/api/: README.md  __init__.py  conftest.py  db_reset.py  docker-compose.yml  pytest.ini  seed_data.py  test_beers.py  test_dashboard.py  test_kegtron.py  test_locations.py  test_plaato_keg.py  test_tap_monitors.py  test_taps.py
api/tests/db/: test_audit.py  test_batch_locations.py  test_batch_overrides.py  test_batches.py  test_beers.py  test_beverages.py  test_image_transitions.py  test_init.py  test_locations.py  test_on_tap.py  test_plaato_data.py  test_tap_monitors.py  test_taps.py  test_user_locations.py  test_users.py
api/tests/dependencies/: __init__.py  test_auth.py
api/tests/lib/: __init__.py  test_exceptions.py  test_init.py  test_json.py  test_time.py  test_units.py  test_util.py
api/tests/routers/: __init__.py  test_auth.py  test_batches.py  test_beers.py  test_beverages.py  test_dashboard.py  test_locations.py  test_settings.py  test_tap_monitors.py  test_taps.py  test_users.py
api/tests/services/: __init__.py  test_base.py  test_batches.py  test_beers.py  test_beverages.py  test_locations.py  test_plaato_keg.py  test_tap_monitors.py  test_taps.py  test_users.py
api/tests/unit/: conftest.py  test_api.py
branding/: favicon.pxd  full logo.pxd  logo icon.pxd  logoin logo.pxd  readme logo.pxd
config/: default.json
deploy/docker-local/: .gitignore  Dockerfile  docker-compose.yml  docker-local.env  nginx.conf
deploy/docker-local/scripts/: seed-db.py
docs/: configs.md  install.md  manage.md
docs/manage/: plaato-keg.md  sensors.md  tap-monitors.md
generic_beer.pxd/: metadata.info
generic_beer.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
generic_beer.pxd/data/: 2B919037-33CA-46B7-AA50-4FC8B13D8196  4E9789E0-50EB-40FB-8A48-CB1C1FB276F3  AF258113-744B-4C74-A2C2-2FA400B00E0F  FFD74641-7C4E-4D6C-896D-3771F6BE9493  originalImportedContentDocumentInfo
scripts/: update-version.sh
ui/: .browserslistrc  .prettierignore  .prettierrc  README.md  angular.json  eslint.config.js  karma-functional.conf.js  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.functional.json  tsconfig.json  tsconfig.spec.json
ui/src/: index.html  styles.scss  test-functional.ts  test.ts
ui/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  data.service.ts  dnd.directive.ts  form-validators.ts
ui/src/environments/: environment.prod.ts  environment.ts
ui/src/styles/: app.scss  main.scss  mixins.scss  variables.scss
(+211 files in other folders)
